# fraud_detection

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
fraud_detection/: __init__.py  config.py  dataset.py  features.py  modeling.py
fraud_detection/modeling/: predict.py  train.py
notebooks/: EDA.ipynb
