[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fraud_detection"
version = "0.0.1"
description = "D\u00e9tection de fraude CB"
authors = [
  { name = "Sitylist94" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["fraud_detection"]
include = ["pyproject.toml", "fraud_detection/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["fraud_detection"]
force-sort-within-sections = true

